--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,9 +24,13 @@
 .sidebar {
     background-color: var(--color-grey-dark-1);
     flex: 0 0 18%;
+    display: flex;
+    flex-direction: column; //changes the direction of the main axis from left->right to top->bottom
+    justify-content: space-between;
 }
 
 .hotel-view {
     background-color: #fff;
+    height: 80rem;
     flex: 1;
 }
