--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 120rem;
+    max-width: 130rem;
     margin: 8rem auto;
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
@@ -35,6 +35,7 @@
 }
 
 .detail {
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
@@ -42,7 +43,6 @@
 }
 
 .description {
-    font-size: 1.4rem;
     background-color: #fff;
     box-shadow: var(--shadow-light);
     padding: 3rem;
@@ -51,6 +51,8 @@
 }
 
 .user-reviews {
-    background-color: yellowgreen;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
